# PCN-PyTorch

./: .gitignore  README.md  demo.py  evaluate.py  loss.py  model.py  requirements.txt  test.py  train.py  utils.py
data/: README.md
dataset/: __init__.py  dataset.py  shapenet.py  split.py
dataset/car_split/: all.list  test.list  val.list
dataset/my_split/: all.list  test.list  train.list  val.list
distance/: chamfer_distance.py  emd_module.py
distance/emd.egg-info/: SOURCES.txt
examples/: 0.pcd  1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  chair.pcd
extensions/chamfer_distance/chamfer_3D.egg-info/: PKG-INFO
extensions/earth_movers_distance/emd_cuda.egg-info/: PKG-INFO
metrics/: loss.py
models/: __init__.py  pcn.py
render/: README.md  partial.sh
sample/: CMakeLists.txt  README.md  mesh_sampling  mesh_sampling.cpp
visualization/: visualization.py
